--- a/app/main.scss
+++ b/app/main.scss
@@ -240,7 +240,7 @@ footer {
 }
 
 .home {
-    margin: 0 8rem 0 17rem;
+    // margin: 0 8rem 0 17rem;
 
     a {
         &:hover {
@@ -400,30 +400,30 @@ footer {
 }
 
 
-/* PARALAX */
-.parallax {
-    perspective: 2px;
-    height: 100vh;
-    overflow-x: hidden;
-    overflow-y: auto;
-}
+// /* PARALAX */
+// .parallax {
+//     perspective: 2px;
+//     height: 100vh;
+//     overflow-x: hidden;
+//     overflow-y: auto;
+// }
 
-.parallax__layer {
-    position: absolute;
-    top: 100px;
-    right: 0;
-    bottom: 0;
-    left: 0;
-}
+// .parallax__layer {
+//     position: absolute;
+//     top: 100px;
+//     right: 0;
+//     bottom: 0;
+//     left: 0;
+// }
 
-.parallax__layer--base {
-    transform: translateZ(0);
-}
+// .parallax__layer--base {
+//     transform: translateZ(0);
+// }
 
-.parallax__layer--back {
-    transform: translateZ(-1px);
-    z-index: -1;
-}
+// .parallax__layer--back {
+//     transform: translateZ(-1px);
+//     z-index: -1;
+// }
 
 
 /* ==========================================================================
