Cambiado display cursos, degradado, tag

--- a/app/sass/lib/_type.sass
+++ b/app/sass/lib/_type.sass
@@ -1,5 +1,5 @@
 
-$body-text: 14px, medium, 140%, 1rem
+$body-text: 14px, 400, 140%, 1rem
 $sm-text: 16px, 600, 140%, 1rem //h5
 $md-text: 20px, bold, 140%, 1rem //h4
 $lg-text: 24px, bold,140%, 1rem  //h3
@@ -37,14 +37,14 @@ html, body
     h4
         font-family: "Montserrat", sans-serif
         font-size: nth($md-text,1)
-        font-weight: nth($md-text,2)
+        // font-weight: nth($md-text,2)
         line-height: nth($md-text,3)
         margin-bottom: nth($md-text,4)
 
     h5
         font-family: "Montserrat", sans-serif
         font-size: nth($sm-text,1)
-        font-weight: nth($sm-text,2)
+        // font-weight: nth($sm-text,2)
         line-height: nth($sm-text,3)
         margin-bottom: nth($sm-text,4)
 
