--- a/app/main.css
+++ b/app/main.css
@@ -3,6 +3,9 @@
    ========================================================================== */
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700");
 @import url("https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i");
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 /* ==========================================================================
     GENERAL
    ========================================================================== */
@@ -165,9 +168,6 @@ footer ul li {
   transition: none;
 }
 
-.home {
-  margin: 0 8rem 0 17rem;
-}
 .home a:hover {
   color: inherit;
 }
@@ -305,31 +305,6 @@ footer ul li {
   transform: rotate(-40deg);
 }
 
-/* PARALAX */
-.parallax {
-  perspective: 2px;
-  height: 100vh;
-  overflow-x: hidden;
-  overflow-y: auto;
-}
-
-.parallax__layer {
-  position: absolute;
-  top: 100px;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-
-.parallax__layer--base {
-  transform: translateZ(0);
-}
-
-.parallax__layer--back {
-  transform: translateZ(-1px);
-  z-index: -1;
-}
-
 /* ==========================================================================
    PROJECTS
    ========================================================================== */
@@ -422,9 +397,13 @@ footer ul li {
 /* ==========================================================================
    TOOLS
    ========================================================================== */
+.banner {
+  background-image: url "/assets/img/tools/header_placeholder-02-01.png";
+  background-color: #282828;
+}
+
 .tools {
   color: white;
-  background-color: #282828;
   padding: 5rem 0 0 0;
   /*---- Scroll Bar ----*/
   /* Track */
@@ -551,13 +530,11 @@ footer ul li {
 .research main .research .filters select,
 .research main .research .filters input {
   padding: 5px;
-  font-family: "Open Sans", sans-serif;
   font-size: 1.3rem;
   margin-right: 1rem;
 }
 .research main .research .filters select,
 .research main .research .filters input {
-  border: 1px solid black;
   margin-right: 3rem;
 }
 .research main .research .filters label {
