--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -73,7 +73,6 @@ $semi-bold: 600;
 $bold: 700;
 $extra-bold: 900;
 
-
 @mixin nav_bar {
   width: 100%;
   display: flex;
@@ -165,20 +164,19 @@ $extra-bold: 900;
 
 .banner {
   margin-top: 60px;
-  height: 100%;
+  height: 13.8vw;
   background-image: url("/assets/img/headers/header-one.png");
   background-color: #282828;
   background-size: contain;
   object-fit: cover;
   display: flex;
   align-items: flex-end;
-  height:160px;
+
+
   h1 {
     padding: 0 0 $spacing_sm $spacing_xl;
-    color:white;
-    
+    color: white;
   }
-
 }
 
 body,
@@ -436,7 +434,8 @@ main {
           width: 50%;
         }
 
-        .body_text {}
+        .body_text {
+        }
       }
     }
 
@@ -673,7 +672,6 @@ main {
             color: inherit;
 
             &:hover {
-
               h2,
               h3 {
                 color: pink;
@@ -811,7 +809,8 @@ main {
           }
 
           a {
-            &:hover {}
+            &:hover {
+            }
           }
 
           .button_container {
@@ -916,7 +915,6 @@ main {
       option {
         text-align: right;
       }
-
     }
 
     .papers {
@@ -956,15 +954,12 @@ main {
             gap: $spacing_md;
             flex-grow: 1;
             .paper_subtitle {
-           
               padding-bottom: $spacing_md;
             }
 
             .paper_doi {
               font-weight: 600;
             }
-
-
           }
         }
         .links {
@@ -980,7 +975,8 @@ main {
               text-decoration: underline;
             }
           }
-        }}
+        }
+      }
     }
   }
 }
@@ -1287,9 +1283,6 @@ main {
 
 // }
 
-
-
-
 /* ==========================================================================
  ABOUT
  ========================================================================== */
@@ -1435,6 +1428,7 @@ RESPONSIVE
     }
   }
 
+
   .home {
     margin: 0 4rem 0 4rem;
 
@@ -1457,6 +1451,7 @@ RESPONSIVE
 }
 
 @media (max-width: 800px) {
+
   .home {
     margin: 0 4rem 0 5rem;
 
@@ -1473,8 +1468,9 @@ RESPONSIVE
     h2 {
       font-size: 1.5rem;
     }
-
+    
     .body {
+
       display: block;
       width: 100%;
 
@@ -1488,7 +1484,14 @@ RESPONSIVE
       }
     }
   }
-
+  .banner {
+    background-image: url("/assets/img/headers/header-one.png");
+    background-size: cover;
+    width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 8rem;
+  }
   .projects {
     main {
       .our_projects {
@@ -1567,6 +1570,7 @@ RESPONSIVE
   }
 }
 
+//MÓVIL MEDIA QUERY
 @media (max-width: 600px) {
   .responsive-hidden {
     display: none !important;
@@ -1679,6 +1683,7 @@ RESPONSIVE
     }
 
     .body {
+      
       .carousel {
         h3 {
           font-size: 1.5rem;
